# hcp2bids

./: LICENSE  README.md  pyproject.toml
hcp2bids/: __init__.py  convert.py  download.py
hcp2bids/subjects/: HCP_1200_exclude.txt  HCP_Retest.txt
tests/: test_hcp2bids.py
