[tool.poetry]
name = "hcp2bids"
version = "0.1.0"
description = ""
authors = ["j1c <jaewonc78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pybids = "^0.12.1"
jupyterlab = "^2.2.8"
boto3 = "^1.15.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
