[tool.poetry]
name = "hcp2bids"
version = "0.2.0"
description = "For downloading and converting HCP1200 data into BIDS spec."
authors = ["j1c <jaewonc78@gmail.com>"]
license = "MIT"
include = ["./hcp2bids/subjects/*.txt"]

[tool.poetry.dependencies]
python = "^3.6"
pybids = ">=0.9.3"
boto3 = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
